# j2py

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.cursor/skills/: README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: rule-layer-pattern.md
.github/issue-drafts/: 38-body.md  classes-split-umbrella.md  expressions-split-umbrella.md  harvest-pattern-issue-template.md
.github/workflows/: behavior.yml  ci.yml  corpus.yml  publish.yml
corpus-reports/perf-1000/: performance-report-2026-06-16.md
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  ASSESSMENT.md  BEHAVIOR_CORPUS.md  CASE_STUDY.md  CASE_STUDY_COMMONS_CODEC_HEX.md  CASE_STUDY_COMMONS_LANG_NUMBER_UTILS.md  CASE_STUDY_COMMONS_TEXT_CASEUTILS.md  CASE_STUDY_GUAVA_BASE_STRINGS.md  CASE_STUDY_JSEMVER.md  CASE_STUDY_NUMBER_UTILS.md  CLI.md  CONFIGURATION.md  CORPUS_SCOREBOARD.md  DIAGNOSTICS_TODO_AUDIT_0.7.0.md  DOCTOR.md  DOCTOR_PRD.md  DOCTOR_PRODUCT_REQUIREMENTS.md  EQUIVALENCE_TESTING.md  FRAMEWORK_PLUGINS.md  GETTING_STARTED.md  INSTALL.md  LLM_HARVEST.md  OUTPUT_REVIEW.md  POSITIONING.md  PRD.md  PRODUCT_REQUIREMENTS.md  README.md  RELEASE_CANDIDATE_0.7.0.md  RELEASE_CANDIDATE_EVIDENCE_0.7.0.md  RELEASE_DOCS_AUDIT_0.7.0.md  RELEASE_DOCUMENTATION_AUDIT_0.7.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_PERFORMANCE_BASELINE_0.7.0.md  RELEASE_TEST_COVERAGE_0.7.0.md  RELEASE_TEST_EVIDENCE_0.7.0.md  RELEASING.md  SARIF.md  SPRING_CONVERSION.md  (+8 more)
docs/agents/: CHANGE_ROUTING.md  COMMON_FAILURES.md  DOCS_MAP.md  DRIFT_CONTROL.md  README.md  VALIDATION_MATRIX.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-tree-sitter-for-java-parsing.md  0003-layered-translation-pipeline.md  0004-claude-as-llm-backend.md  0005-python-311-target-with-type-hints.md  0006-overload-translation-policy.md  0007-type-declaration-translation.md  0008-expression-narrowing-and-bitwise-translation.md  0009-two-tier-overload-translation.md  0010-post-llm-structural-verification.md  0010-synchronized-this-translation.md  0011-javadoc-docstring-translation.md  0012-sealed-type-metadata.md  0013-static-overload-dispatch.md  0014-equivalence-differential-testing.md  0015-synchronized-this-translation.md  0016-class-reference-expression-imports.md  0017-llm-harvest-for-rule-layer-backlog.md  0017-multi-provider-llm-backend.md  0018-cross-file-class-hierarchies.md  0019-annotation-map-framework-lowering.md  0019-jdk-lowering-vs-platform-boundary-stubs.md  0020-jdk-lowering-vs-platform-boundary-stubs.md  0021-sibling-type-refs-as-body-local-imports.md  0022-framework-plugin-architecture.md  0023-llm-harvest-for-rule-layer-backlog.md  0024-spring-extension-boundary.md  0025-petclinic-smoke-gate.md  AUDIT-2026-06-13.md  AUDIT-2026-06-15.md  AUDIT-2026-06-17.md
docs/developer/: API_STABILITY.md  DIAGNOSTICS.md  FRAMEWORK_PLUGIN_AUTHORING.md  LLM_PROVIDERS.md  PARSER_ANALYZER.md  README.md  RULE_AUTHORING.md  TRANSLATION_INTERNALS.md  VALIDATION_GATES.md  VS_CODE_EXTENSION.md  WIRING_TARGETS.md
docs/examples/: SPRING_MAPPING_COOKBOOK.md  spring-to-fastapi.toml  spring-to-fastapi.yaml
docs/releases/: README.md
j2py/: __init__.py  dashboard.py  doctor.py  doctor_advice.py  doctor_assessment.py  doctor_diff.py  doctor_gate.py  doctor_io.py  doctor_method_signals.py  doctor_models.py  doctor_project_structure.py  doctor_readiness.py  doctor_renderers.py  dotenv.py  framework.py  pipeline.py  report.py  sarif.py  state.py  wiring_contract.py
j2py/analyze/: __init__.py  graph.py  symbols.py
j2py/cli/: analyze.py  compare.py  config.py  doctor.py  main.py  output.py  translate.py  watch.py
j2py/config/: __init__.py  default.py  loader.py
j2py/framework_plugins/: __init__.py  spring.py
j2py/llm/: __init__.py  client.py  env.py  harvest.py  prompts.py  review.py  usage.py
j2py/parse/: __init__.py  java_ast.py
j2py/translate/: __init__.py  annotation_emit.py  annotation_types.py  bean_validation.py  class_annotations.py  class_enums.py  class_environment.py  class_fields.py  class_interfaces.py  class_members.py  class_methods.py  class_model.py  class_nested.py  classes.py  comments.py  diagnostics.py  expr_access.py  expr_assignments.py  expr_binary.py  expr_calls.py  expr_collection_calls.py  expr_conditionals.py  expr_jdbc_calls.py  expr_jdk_calls.py  expr_lambdas.py  expr_objects.py  expr_ops.py  expr_static_calls.py  expr_streams.py  expr_switch.py  expr_types.py  expr_unary.py  expressions.py  framework_annotations.py  framework_dispatch.py  java_types.py  jdbc_row_mapper.py  member_resolution.py  name_resolution.py  node_utils.py  (+22 more)
j2py/validate/: __init__.py  checks.py
j2py/verify/: __init__.py  structure.py
j2py/wire/: __init__.py  cli.py  loader.py  schema.py  spring_xml.py  validation.py
scripts/: explore_llm.py
scripts/agents/: worktree_hygiene.py
scripts/corpus/: aggregate_hotspots.py  annotation_filter.py  baseline_comparison.py  behavior_corpus_writer.py  corpus_presets.py  counter_summary.py  enterprise_metrics.py  gen_behavior_corpus.py  report_io.py  translate_corpus.py  translate_spring_sample.py
scripts/equivalence/: check_surface_floor.py  surface_report.py
scripts/harvest/: aggregate_llm_harvest.py  build_harvest_queue.py  harvest_cache.py  harvest_equivalence_tests.py  harvest_presets.py  harvest_state.py  promote_harvest_signals.py  prune_llm_harvest.py  run_harvest_promotion.py  run_llm_harvest.py  signal_patterns.py  suggest_future_targets.py  triage_lib.py
scripts/packaging/: check_coverage_floor.py  check_release_versions.py  (+1 more)
tests/: conftest.py  test_ci_workflows.py  test_docs_links.py  test_doctor.py  test_doctor_advice.py  test_dotenv.py  test_import_boundary.py  test_pipeline.py  test_release_candidate_checklist.py  test_release_coverage_inventory.py  test_release_diagnostics_todo_audit.py  test_release_performance_baseline.py  test_report.py  test_sarif.py  test_skill_docs.py  test_spring_wiring_metadata_profile.py  test_state_dashboard.py
(+361 files in other folders)
