[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "j2py"
version = "0.1.0"
description = "Java to Python source converter with line-level semantic equivalence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "networkx>=3.3",
    "anthropic>=0.30",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "diskcache>=5.6",
    "tenacity>=8.3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
j2py = "j2py.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-snapshot>=0.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"j2py/cli/*.py" = ["B008"]  # typer uses function calls in argument defaults by design

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -m 'not behavior and not live_llm and not target_translation'"
markers = [
    "behavior: Java/Python behavior-equivalence tests that require a local JDK. Excluded from normal test runs; run with: pytest -m behavior tests/behavior",
    "target_translation: graduated and future Java-to-Python roadmap targets that are excluded from make check",
    "live_llm: end-to-end exploratory tests that make live calls to the Anthropic API. These are excluded from normal test runs and make check. Run on demand with: ANTHROPIC_API_KEY=... pytest -m live_llm tests/llm/test_e2e_llm.py -v -s",
]
