[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "j2py-converter"
version = "0.6.0b1"
description = "Java-to-Python source translator with line-level structural correspondence for side-by-side review"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Thomas Haederle", email = "thomas.haederle@gmail.com" },
]
keywords = [
    "java",
    "python",
    "translation",
    "transpiler",
    "source-conversion",
    "codegen",
    "tree-sitter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Java",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-java>=0.23",
    "networkx>=3.3",
    "anthropic>=0.30",
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "diskcache>=5.6",
    "tenacity>=8.3",
]

[project.urls]
Homepage = "https://github.com/tomanizer/j2py"
Repository = "https://github.com/tomanizer/j2py"
Issues = "https://github.com/tomanizer/j2py/issues"
Changelog = "https://github.com/tomanizer/j2py/blob/main/CHANGELOG.md"

[project.scripts]
j2py = "j2py.cli.main:app"
j2py-wire = "j2py.wire.cli:app"

[project.optional-dependencies]
yaml = [
    "PyYAML>=6.0",
]
watch = [
    "watchdog>=4.0",
]
validate = [
    "mypy>=1.10",
    "ruff>=0.4",
]
gemini = [
    "google-genai>=1.0",
]
openai = [
    "openai>=1.0",
]
spring = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
]
test = [
    "mypy>=1.10",
    "PyYAML>=6.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-snapshot>=0.9",
    "ruff>=0.4",
]
dev = [
    "google-genai>=1.0",
    "openai>=1.0",
    "mypy>=1.10",
    "PyYAML>=6.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-snapshot>=0.9",
    "ruff>=0.4",
    "twine>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["j2py"]

[tool.hatch.build.targets.sdist]
include = [
    "j2py",
    "packages/j2py-vscode",
    "tests",
    "docs",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "SECURITY.md",
    "Makefile",
]
exclude = [
    "/.claude",
    "/.codex",
    "/.claire",
    "/.cursor",
    "/.cursor/**",
    "/.venv",
    "/.corpus",
    "/corpus-reports",
    "/dist",
    "/.mypy_cache*",
    "/.pytest_cache*",
    "/.ruff_cache*",
    "**/__pycache__*",
    "**/*.pyc",
    "**/*.pyo",
    "/packages/j2py-vscode/node_modules",
    "/packages/j2py-vscode/out",
    "/packages/j2py-vscode/*.vsix",
    "/tests/fixtures/python",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"j2py/cli/*.py" = ["B008"]  # typer uses function calls in argument defaults by design

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -m 'not behavior and not live_llm and not target_translation'"
markers = [
    "behavior: Java/Python behavior-equivalence tests that require a local JDK. Excluded from normal test runs; run with: pytest -m behavior tests/behavior",
    "target_translation: strict xfail contracts for future Java-to-Python roadmap targets. Excluded from make check; run with `make test-targets`.",
    "equivalence: runtime equivalence gate — rule-layer translation of a vendored real-library class run against literal-oracle assertions ported from its upstream unit tests. Runs in make check (no JDK, no LLM).",
    "equivalence_surface(fixture, signature): Java method signature verified by a passing literal-oracle equivalence test item.",
    "live_llm: end-to-end exploratory tests that make live calls to an LLM provider. These are excluded from normal test runs and make check. Run Anthropic probes with `make test-llm-e2e` and Gemini probes with `make test-llm-gemini-e2e`.",
]

[tool.coverage.run]
branch = true
source = ["j2py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"
